--- a/TEDU.Model/TEDU.Model.csproj
+++ b/TEDU.Model/TEDU.Model.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Model\Footer.cs" />
     <Compile Include="Model\Menu.cs" />
     <Compile Include="Model\MenuGroup.cs" />
+    <Compile Include="Model\Order.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
