--- a/TEDU.Data/TEDU.Data.csproj
+++ b/TEDU.Data/TEDU.Data.csproj
@@ -58,6 +58,28 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="Migrations\201708020804409_InitialDB.cs" />
+    <Compile Include="Migrations\201708020804409_InitialDB.Designer.cs">
+      <DependentUpon>201708020804409_InitialDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Reposotpries\FooterRepository.cs" />
+    <Compile Include="Reposotpries\MenuGroupRepository.cs" />
+    <Compile Include="Reposotpries\MenuRepository.cs" />
+    <Compile Include="Reposotpries\OrderDetailRepository.cs" />
+    <Compile Include="Reposotpries\OrderRepository.cs" />
+    <Compile Include="Reposotpries\PageRepository.cs" />
+    <Compile Include="Reposotpries\PostCategoryRepository.cs" />
+    <Compile Include="Reposotpries\PostRepository.cs" />
+    <Compile Include="Reposotpries\PostTagRepository.cs" />
+    <Compile Include="Reposotpries\ProductCategoryRepository.cs" />
+    <Compile Include="Reposotpries\ProductRepository.cs" />
+    <Compile Include="Reposotpries\ProductTagRepository.cs" />
+    <Compile Include="Reposotpries\SlideRepository.cs" />
+    <Compile Include="Reposotpries\SupportOnlineRepository.cs" />
+    <Compile Include="Reposotpries\SystemConfigRepository.cs" />
+    <Compile Include="Reposotpries\TagRepository.cs" />
+    <Compile Include="Reposotpries\VisitorStatisticRepository.cs" />
     <Compile Include="TeduShopDbContext.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -77,7 +99,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Reposotpries\" />
+    <EmbeddedResource Include="Migrations\201708020804409_InitialDB.resx">
+      <DependentUpon>201708020804409_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
