--- a/TEDU.Common/TEDU.Common.csproj
+++ b/TEDU.Common/TEDU.Common.csproj
@@ -44,8 +44,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommonConstants.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringHelper.cs" />
+    <Compile Include="ViewModels\RevenueStatisticViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
